--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,20 +10,25 @@ pipeline {
     agent any
 
     stages {
-        stage('Download from GCS') {
+        stage('bentoml list check') {
             steps {
-                sh '''
-                export APP_DIR=serving/${APP_NAME}/bento-ml
-                gcloud auth activate-service-account --key-file=${SA_KEY_PATH}
-                gsutil cp -r ${NAS_NAME}/${EXPERIMENT_ID}/${RUN_ID} ${APP_DIR}
-                ls -l ${APP_DIR}
-                '''
+                sh 'bentoml list -o table'
             }
         }
-        stage('Build Bento') {
-            steps {
-                sh './serving/bento.sh ${APP_NAME} ${EXPERIMENT_ID} ${RUN_ID} ${AR_NAME}'
-            }
-        }
+        // stage('Download from GCS') {
+        //     steps {
+        //         sh '''
+        //         export APP_DIR=serving/${APP_NAME}/bento-ml
+        //         gcloud auth activate-service-account --key-file=${SA_KEY_PATH}
+        //         gsutil cp -r ${NAS_NAME}/${EXPERIMENT_ID}/${RUN_ID} ${APP_DIR}
+        //         ls -l ${APP_DIR}
+        //         '''
+        //     }
+        // }
+        // stage('Build Bento') {
+        //     steps {
+        //         sh './serving/bento.sh ${APP_NAME} ${EXPERIMENT_ID} ${RUN_ID} ${AR_NAME}'
+        //     }
+        // }
         }
 }
