--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         stage('bentoml list check') {
             steps {
                 sh 'echo $APP_NAME-bento-svc'
-                echo 'Hello world'
+                sh 'ls -l $HOME/bentoml/bentos/$APP_NAME-bento-svc'
             }
         }
         // stage('Download from GCS') {
