--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,26 +10,20 @@ pipeline {
     agent any
 
     stages {
-        stage('bentoml list check') {
+        stage('Download from GCS') {
             steps {
-                sh 'echo $APP_NAME-bento-svc'
-                sh 'tmp=$APP_NAME-bento-svc$(cat < $HOME/bentoml/bentos/$APP_NAME-bento-svc/latest);echo $tmp'
+                sh '''
+                export APP_DIR=serving/${APP_NAME}/bento-ml
+                gcloud auth activate-service-account --key-file=${SA_KEY_PATH}
+                gsutil cp -r ${NAS_NAME}/${EXPERIMENT_ID}/${RUN_ID} ${APP_DIR}
+                ls -l ${APP_DIR}
+                '''
             }
         }
-        // stage('Download from GCS') {
-        //     steps {
-        //         sh '''
-        //         export APP_DIR=serving/${APP_NAME}/bento-ml
-        //         gcloud auth activate-service-account --key-file=${SA_KEY_PATH}
-        //         gsutil cp -r ${NAS_NAME}/${EXPERIMENT_ID}/${RUN_ID} ${APP_DIR}
-        //         ls -l ${APP_DIR}
-        //         '''
-        //     }
-        // }
-        // stage('Build Bento') {
-        //     steps {
-        //         sh './serving/bento.sh ${APP_NAME} ${EXPERIMENT_ID} ${RUN_ID} ${AR_NAME}'
-        //     }
-        // }
+        stage('Build Bento') {
+            steps {
+                sh './serving/bento.sh ${APP_NAME} ${EXPERIMENT_ID} ${RUN_ID} ${AR_NAME}'
+            }
+        }
         }
 }
