test: tabular-iris-xgboost app

--- a/serving/tabular-iris-xgboost/bento-ml/bentofile.yaml
+++ b/serving/tabular-iris-xgboost/bento-ml/bentofile.yaml
@@ -1,5 +1,5 @@
 # sector that modify
-service: "service:svc"
+service: "serving.tabular-diabetes-regressor.bento-ml.service:svc"
 labels:
   onwer: zedd-ai
   stage: local
