--- a/serving/tabuluar-iris-pytorch/bento-ml/bentofile.yaml
+++ b/serving/tabuluar-iris-pytorch/bento-ml/bentofile.yaml
@@ -1,5 +1,5 @@
 # sector that modify
-service: "service:svc"
+service: "serving.tabular-iris-pytorch.bento-ml.service:TorchRegressor"
 labels:
   onwer: zedd-ai
   stage: local
